k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist
spec:
  selector: 
    app: todolist
  type: ClusterIP
  ports:
  - port: 10000
    targetPort: 10000
